# amortizer

./: README.md  amortizer.py  pyproject.toml
